<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stadium"
    android:scaleType="centerCrop"
    android:fillViewport="true"
    tools:context="com.example.android.footballscoretracker.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:text="@string/team_a_name"
                style="@style/teamStyle" />

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:text="@string/team_b_name"
                style="@style/teamStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/score"
            android:textAllCaps="true"
            android:textColor="@color/yellow_text_color"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/team_a_data"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:gravity="end"
                    android:text="@string/starting_value_zero"
                    style="@style/teamScore" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tint_color"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/dp_2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/fouls"
                        android:textAllCaps="true"
                        android:textColor="@color/yellow_text_color"
                        android:textSize="@dimen/sp_12"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cards"
                        android:textAllCaps="true"
                        android:textColor="@color/yellow_text_color"
                        android:textSize="@dimen/sp_12"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tint_color"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_3">

                    <TextView
                        android:id="@+id/fouls_team_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/starting_value_zero"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_16" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_20"
                            android:padding="3dp"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_10"
                            android:background="@color/yellow_card_color"/>

                        <TextView
                            android:id="@+id/team_a_yellow_cards"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/dp_4"
                            android:paddingRight="@dimen/dp_4"
                            android:text="@string/starting_value_zero"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_16" />

                        <TextView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_20"
                            android:padding="@dimen/dp_3"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_10"
                            android:background="@color/red_card_color"/>

                        <TextView
                            android:id="@+id/team_a_red_cards"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/dp_4"
                            android:text="@string/starting_value_zero"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_16" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/add_goal_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:onClick="scoreGoal"
                    android:text="@string/goal"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

                <Button
                    android:id="@+id/add_foul_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:onClick="addFoul"
                    android:text="@string/foul"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_yellow_team_a"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:layout_weight="1"
                        android:onClick="addYellow"
                        android:text="@string/yellow"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_15" />

                    <Button
                        android:id="@+id/add_red_team_a"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:layout_weight="1"
                        android:onClick="addRed"
                        android:text="@string/red"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="@dimen/dp_7"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/score_separator"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_23" />

            <LinearLayout
                android:id="@+id/team_b_data"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:gravity="start"
                    android:text="@string/starting_value_zero"
                    style="@style/teamScore"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tint_color"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/dp_2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/fouls"
                        android:textAllCaps="true"
                        android:textColor="@color/yellow_text_color"
                        android:textSize="@dimen/sp_12"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cards"
                        android:textAllCaps="true"
                        android:textColor="@color/yellow_text_color"
                        android:textSize="@dimen/sp_12"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tint_color"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_4">

                    <TextView
                        android:id="@+id/fouls_team_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/starting_value_zero"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_16" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_20"
                            android:padding="@dimen/dp_3"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_10"
                            android:background="@color/yellow_card_color" />

                        <TextView
                            android:id="@+id/team_b_yellow_cards"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/dp_4"
                            android:paddingRight="@dimen/dp_4"
                            android:text="@string/starting_value_zero"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_16" />

                        <TextView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_20"
                            android:padding="@dimen/dp_3"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_marginStart="@dimen/dp_10"
                            android:background="@color/red_card_color" />

                        <TextView
                            android:id="@+id/team_b_red_cards"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/dp_4"
                            android:paddingRight="@dimen/dp_4"
                            android:text="@string/starting_value_zero"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_16" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/add_goal_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:onClick="scoreGoal"
                    android:text="@string/goal"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

                <Button
                    android:id="@+id/add_foul_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:onClick="addFoul"
                    android:text="@string/foul"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_yellow_team_b"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:layout_weight="1"
                        android:onClick="addYellow"
                        android:text="@string/yellow"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_15" />

                    <Button
                        android:id="@+id/add_red_team_b"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:layout_weight="1"
                        android:onClick="addRed"
                        android:text="@string/red"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/undo"
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:onClick="undo"
            android:text="@string/undo"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15" />

        <Button
            android:id="@+id/reset_all"
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="resetAll"
            android:text="@string/reset"
            android:textColor="@color/yellow_text_color"
            android:textSize="@dimen/sp_15"/>

    </LinearLayout>

</ScrollView>